--- a/src/main/webapp/clientmanager/manageuserdetails/manageemailusers.xhtml
+++ b/src/main/webapp/clientmanager/manageuserdetails/manageemailusers.xhtml
@@ -205,7 +205,7 @@
                                     <p:outputLabel for="action" value="Select Action" style="margin-right: 10px; width: 150px;"/>
                                     <p:selectOneMenu id="action" value="#{emailcontroller.currentEmailUser.creditManageType}" >
                                         <f:selectItem itemLabel="Add Credit" itemValue="add"/>
-                                        <f:selectItem itemLabel="Alter Credit" itemValue="update"/>
+                                        <f:selectItem itemLabel="Deduct Credit" itemValue="update"/>
                                     </p:selectOneMenu>
                                 </div>
                                 <div style="display: flex; align-items: center; margin-bottom: 10px;">
