--- a/src/main/webapp/clientmanager/manageuserdetails/showsmsusers.xhtml
+++ b/src/main/webapp/clientmanager/manageuserdetails/showsmsusers.xhtml
@@ -443,7 +443,7 @@
                                     <p:outputLabel for="creditManageType" value="Select Action:" style="margin-right: 10px; width: 150px;"/>
                                     <p:selectOneMenu id="creditManageType" value="#{smscontroller.currentSmsUser.creditManageType}">
                                         <f:selectItem itemLabel="Add Credit" itemValue="add"/>
-                                        <f:selectItem itemLabel="Alter Credit" itemValue="update"/>
+                                        <f:selectItem itemLabel="Deduct Credit" itemValue="update"/>
                                     </p:selectOneMenu>
                                 </div>
                                 <div style="display: flex; align-items: center; margin-bottom: 10px;">
