--- a/src/main/webapp/rightnav.xhtml
+++ b/src/main/webapp/rightnav.xhtml
@@ -127,7 +127,7 @@
                     </p:submenu>
                     <p:submenu rendered="#{userScroller.amIAdmin()}" label="My Account" expanded="true" >
                         <p:menuitem  value="My Profile " actionListener="#{userInfo.myProfile()}"
-                                     ajax="false" icon="fa-regular fa-address-card" />
+                                     ajax="false" icon="pi pi-user" />
                         <p:menuitem  value="Account Top up" actionListener="#{userInfo.accountTopup()}"
                                      ajax="false" icon="fa fa-money" />
                         <p:menuitem  value="Send SMS" url="#{userScroller.sendSMS()}"  ajax="false" 
@@ -156,7 +156,7 @@
                         <p:menuitem  value="Opt Out Report" actionListener="#{userInfo.optoutreport()}"  ajax="false" icon="pi pi-sign-out"/>
                         <p:menuitem  value="Credit History Report" actionListener="#{userInfo.credithistoryreport()}" 
                                      ajax="false" icon="pi pi-book " />
-                        <p:menuitem value="Bulk Reports" actionListener="#{userInfo.bulkReports()}" ajax="false" icon="pi pi-envelope"/>
+<!--                        <p:menuitem value="Bulk Reports" actionListener="{userInfo.bulkReports()}" ajax="false" icon="pi pi-envelope"/>-->
                         <!--<p:menuitem  value="Single User Visual Report" actionListener="{userInfo.singleuservisualreport()}"  ajax="false" icon="fa-solid fa-file-image" />-->
                         <!--<p:menuitem  value="All Users VIsual Report" actionListener="{userInfo.alluservisualreport()}"  ajax="false" icon="fa-solid fa-photo-film" />-->
                     </p:submenu>
