--- a/src/main/webapp/clientmanager/reports/emailoutreport.xhtml
+++ b/src/main/webapp/clientmanager/reports/emailoutreport.xhtml
@@ -49,7 +49,7 @@
 
                         <h:panelGrid columns="1" style="width:100%; margin-left:auto; margin-right:auto; padding:8px; text-align:center;">
                             <p:commandButton value="Generate" action="#{emailoutcontroller.generateEmailOut()}"
-                                             update="msgs report:table"/>
+                                             update="msgs report:table" ajax="true"/>
                         </h:panelGrid>
 
                         <p:dialog widgetVar="loader" modal="true" closable="false" draggable="false" resizable="false" showHeader="false" width="100" height="50">
@@ -58,11 +58,13 @@
                     </h:form>
 
                     <h:form id="report">
-                        <p:dataTable id="table" var="emailuser" value="#{emailoutcontroller.emailUsers}"
+                        <p:dataTable id="table" var="emailuser" value="#{emailoutcontroller.lazyModel}"
+                                     lazy="true"
                                      rows="10"
                                      paginator="true" paginatorPosition="bottom"
                                      paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-                                     currentPageReportTemplate="Summary total emails sent for this period #{emailoutcontroller.rows}" >
+                                     currentPageReportTemplate="Summary total emails sent for this period {totalRecords} records"
+                                     >
                             <p:column>
                                 <f:facet name="header">
                                     <h:outputText value="User"/>
