--- a/src/main/webapp/rightnav.xhtml
+++ b/src/main/webapp/rightnav.xhtml
@@ -164,9 +164,9 @@
                         <p:menuitem  value="Opt Out Report" actionListener="#{userInfo.optoutreport()}"  ajax="false" icon="pi pi-sign-out"/>
                         <p:menuitem  value="Credit History Report" actionListener="#{userInfo.credithistoryreport()}" 
                                      ajax="false" icon="pi pi-book " />
-                        <!--                        <p:menuitem value="Bulk Reports" actionListener="{userInfo.bulkReports()}" ajax="false" icon="pi pi-envelope"/>-->
-                        <!--<p:menuitem  value="Single User Visual Report" actionListener="{userInfo.singleuservisualreport()}"  ajax="false" icon="fa-solid fa-file-image" />-->
-                        <!--<p:menuitem  value="All Users VIsual Report" actionListener="{userInfo.alluservisualreport()}"  ajax="false" icon="fa-solid fa-photo-film" />-->
+<!--                                                <p:menuitem value="Bulk Reports" actionListener="{userInfo.bulkReports()}" ajax="false" icon="pi pi-envelope"/>
+                        <p:menuitem  value="Single User Visual Report" actionListener="{userInfo.singleuservisualreport()}"  ajax="false" icon="fa-solid fa-file-image" />
+                        <p:menuitem  value="All Users VIsual Report" actionListener="{userInfo.alluservisualreport()}"  ajax="false" icon="fa-solid fa-photo-film" />-->
                     </p:submenu>
 
                 </p:panelMenu> 
