--- a/src/main/webapp/rightnav.xhtml
+++ b/src/main/webapp/rightnav.xhtml
@@ -132,6 +132,12 @@
                                      background-repeat: no-repeat;
                                      background-position: left;
                                      padding-left: 20px;" />
+                        <p:menuitem  value="Dedicatedshortcode" actionListener="#{userInfo.viewdedicatedshortcode()}"  ajax="false"
+                                     style="background-image: url('#{resource['images/managecallback.png']}');
+                                     background-size: 1rem 1rem;
+                                     background-repeat: no-repeat;
+                                     background-position: left;
+                                     padding-left: 20px;" />
                     </p:submenu>
                     <p:submenu rendered="#{userScroller.amIAdmin()}" label="My Account" expanded="true" >
                         <p:menuitem  value="My Profile " actionListener="#{userInfo.myProfile()}"
@@ -164,9 +170,9 @@
                         <p:menuitem  value="Opt Out Report" actionListener="#{userInfo.optoutreport()}"  ajax="false" icon="pi pi-sign-out"/>
                         <p:menuitem  value="Credit History Report" actionListener="#{userInfo.credithistoryreport()}" 
                                      ajax="false" icon="pi pi-book " />
-<!--                                                <p:menuitem value="Bulk Reports" actionListener="{userInfo.bulkReports()}" ajax="false" icon="pi pi-envelope"/>
-                        <p:menuitem  value="Single User Visual Report" actionListener="{userInfo.singleuservisualreport()}"  ajax="false" icon="fa-solid fa-file-image" />
-                        <p:menuitem  value="All Users VIsual Report" actionListener="{userInfo.alluservisualreport()}"  ajax="false" icon="fa-solid fa-photo-film" />-->
+                        <!--                                                <p:menuitem value="Bulk Reports" actionListener="{userInfo.bulkReports()}" ajax="false" icon="pi pi-envelope"/>
+                                                <p:menuitem  value="Single User Visual Report" actionListener="{userInfo.singleuservisualreport()}"  ajax="false" icon="fa-solid fa-file-image" />
+                                                <p:menuitem  value="All Users VIsual Report" actionListener="{userInfo.alluservisualreport()}"  ajax="false" icon="fa-solid fa-photo-film" />-->
                     </p:submenu>
 
                 </p:panelMenu> 
